--- a/server/package.json
+++ b/server/package.json
@@ -13,15 +13,18 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.20.2",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "pg": "^8.11.0",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
-    "bcrypt": "^5.1.0",
-    "express-validator": "^7.0.1"
+    "pg": "^8.11.0"
   },
   "devDependencies": {
+    "eslint": "^8.42.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "nodemon": "^2.0.22"
   }
 }
