--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
@@ -22,9 +23,9 @@
     "pg": "^8.11.0"
   },
   "devDependencies": {
-    "eslint": "^8.42.0",
+    "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.25.2",
     "nodemon": "^2.0.22"
   }
 }
