--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,14 @@
     "babel-polyfill": "^6.26.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
-    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "eslint": "^7.32.0 || ^8.2.0",
