--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-email": "^1.0.9",
     "react-router-dom": "6",
     "react-toastify": "^9.1.3"
   },
