--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,13 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.9.3",
     "pg": "^8.11.0",
+    "socket.io": "^4.6.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3",
-    "nodemailer": "^6.9.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
