--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-multi-email": "^1.0.9",
     "react-router-dom": "6",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.6.2"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
