Update Docker files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,11 +34,9 @@ services:
   db:
     image: postgres:15.3
     restart: always
+    env_file:
+      - ./server/.env
     container_name: db
-    environment:
-      POSTGRES_USER: "admin"
-      POSTGRES_PASSWORD: "strongPassword"
-      POSTGRES_DB: "db"
 
     ports:
       - 5432:5432
