Configure Docker config file and change build files

--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -2,9 +2,9 @@ events {}
 
 http {
   server {
-    listen 3000;
+    listen 80;
+    root /var/www/html;
     include mime.types;
-    root /var/html;
     location / {
       try_files $uri $uri/ index.html;
     }
