--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -31,8 +31,8 @@ COPY ./ ./
 
 FROM nginx:1.25.0-alpine as production
 
-COPY --from=builder /app/dist /var/html/
-
-EXPOSE 3000
+COPY --from=builder /app/dist /var/www/html
+COPY ./nginx.conf /etc/nginx/nginx.conf
+EXPOSE 80
 
 ENTRYPOINT [ "nginx","-g","daemon off;" ]
