--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -7,11 +7,7 @@ services:
       context: client
       target: production
     ports:
-      - 3000:3000
-    volumes:
-      - ./client:/app
-      - /app/node_modules
-      - ./client/nginx.conf:/etc/nginx/nginx.conf
+      - 80:80
     networks:
       - app-network
 
@@ -31,10 +27,8 @@ services:
     image: postgres:15.3
     restart: always
     container_name: db
-    environment:
-      POSTGRES_USER: "admin"
-      POSTGRES_PASSWORD: "strongPassword"
-      POSTGRES_DB: "db"
+    env_file:
+      - ./server/.env
 
     ports:
       - 5432:5432
@@ -43,21 +37,21 @@ services:
     networks:
       - app-network
 
-  https-portal:
-    image: steveltn/https-portal:1
-    ports:
-      - "80:80"
-      - "443:443"
-    environment:
-      DOMAINS: "project-management.duckdns.org -> http://client:3000, api.project-management.duckdns.org -> http://server:8000"
-      STAGE: "production" # Don't use production until staging works
-      WEBSOCKET: "true"
-    volumes:
-      - https-portal-data:/var/lib/https-portal
-    networks:
-      - app-network
+  # https-portal:
+  #   image: steveltn/https-portal:1
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
+  #   environment:
+  #     DOMAINS: "project-management.duckdns.org -> http://client:3000, api.project-management.duckdns.org -> http://server:8000"
+  #     STAGE: "production" # Don't use production until staging works
+  #     WEBSOCKET: "true"
+  #   volumes:
+  #     - https-portal-data:/var/lib/https-portal
+  #   networks:
+  #     - app-network
 
-volumes:
-  https-portal-data: # Recommended, to avoid re-signing when upgrading HTTPS-PORTAL
+# volumes:
+#   https-portal-data: # Recommended, to avoid re-signing when upgrading HTTPS-PORTAL
 networks:
   app-network:
