--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -3,10 +3,10 @@ events {}
 http {
   server {
     listen 80;
-    root /var/www/html;
+    root /var/www/html/;
     include mime.types;
     location / {
-      try_files $uri $uri/ index.html;
+      try_files $uri $uri/ /index.html;
     }
   }
 }
